--- a/artikel/manfaat-musik-fokus-kerja.html
+++ b/artikel/manfaat-musik-fokus-kerja.html
@@ -45,8 +45,8 @@
                 <div class="menu-btn"><i class="fas fa-bars"></i></div>
                 <ul class="nav-links">
                     <li><a href="../index.html">Beranda</a></li>
-                    <li><a href="../produk.html">Produk</a></li>
                     <li><a href="../about.html">Tentang Kami</a></li>
+                    <li><a href="../produk.html">Produk</a></li>
                     <li><a href="../blog.html">Blog</a></li>
                 </ul>
             </nav>
@@ -57,7 +57,7 @@
         <div class="container">
             <!-- Breadcrumb -->
             <div class="breadcrumb">
-                <a href="../index.html">Home</a> / <a href="../blog.html">Blog</a> / Manfaat Musik Fokus Kerja
+                <a href="../index.html">Beranda</a> / <a href="../blog.html">Blog</a> / Manfaat Musik Fokus Kerja
             </div>
 
             <article>
@@ -72,9 +72,9 @@
 
                 <div class="main-article-img">
                     <img src="../img/blog1.png" alt="Musik untuk Konsentrasi">
-                    <p class="img-caption">Mendengarkan musik yang tepat dapat menciptakan ruang kedap suara psikologis
-                        yang membantu Anda tetap fokus.</p>
                 </div>
+                <p class="img-caption">Mendengarkan musik yang tepat dapat menciptakan ruang kedap suara psikologis
+                    yang membantu Anda tetap fokus.</p>
 
                 <!-- Table of Contents -->
                 <div class="toc">
@@ -128,9 +128,9 @@
 
                     <div class="main-article-img">
                         <img src="../img/variants.png" alt="Speaker Berwarna">
-                        <p class="img-caption">Pilihan warna speaker yang sesuai dengan interior meja kerja juga dapat
-                            meningkatkan mood secara visual.</p>
                     </div>
+                    <p class="img-caption">Pilihan warna speaker yang sesuai dengan interior meja kerja juga dapat
+                        meningkatkan mood secara visual.</p>
 
                     <h2 id="jenis-musik">Jenis Musik Terbaik untuk Kerja</h2>
                     <p>Banyak ahli menyarankan musik instrumen atau klasik karena lirik seringkali menjadi distraksi
