--- a/artikel/review-vifa-helsinki.html
+++ b/artikel/review-vifa-helsinki.html
@@ -45,8 +45,8 @@
                 <div class="menu-btn"><i class="fas fa-bars"></i></div>
                 <ul class="nav-links">
                     <li><a href="../index.html">Beranda</a></li>
-                    <li><a href="../produk.html">Produk</a></li>
                     <li><a href="../about.html">Tentang Kami</a></li>
+                    <li><a href="../produk.html">Produk</a></li>
                     <li><a href="../blog.html">Blog</a></li>
                 </ul>
             </nav>
@@ -56,7 +56,7 @@
     <main class="article-page">
         <div class="container">
             <div class="breadcrumb">
-                <a href="../index.html">Home</a> / <a href="../blog.html">Blog</a> / Review Vifa Helsinki
+                <a href="../index.html">Beranda</a> / <a href="../blog.html">Blog</a> / Review Vifa Helsinki
             </div>
 
             <article>
@@ -71,9 +71,9 @@
 
                 <div class="main-article-img">
                     <img src="../img/hero.png" alt="Vifa Helsinki Review">
-                    <p class="img-caption">Desain minimalis Nordik dari Vifa Helsinki yang menggabungkan estetika
-                        fashion dan teknologi audio.</p>
                 </div>
+                <p class="img-caption">Desain minimalis Nordik dari Vifa Helsinki yang menggabungkan estetika
+                    fashion dan teknologi audio.</p>
 
                 <div class="toc">
                     <div class="toc-header">
