--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="id">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Helsinki Speaker - Speaker Nirkabel Premium</title>
-    <meta name="description" content="Helsinki Wireless Speaker - Kombinasi sempurna antara desain elegan dan kualitas suara premium.">
+    <meta name="description"
+        content="Helsinki Wireless Speaker - Kombinasi sempurna antara desain elegan dan kualitas suara premium.">
     <!-- Google Fonts -->
     <link rel="stylesheet" href="css/style.css">
     <!-- Font Awesome -->
@@ -16,12 +18,14 @@
             transform: translateY(30px);
             transition: all 0.8s ease-out;
         }
+
         .animate-me.animate-in {
             opacity: 1;
             transform: translateY(0);
         }
     </style>
 </head>
+
 <body>
 
     <!-- Navbar -->
@@ -32,8 +36,8 @@
                 <div class="menu-btn"><i class="fas fa-bars"></i></div>
                 <ul class="nav-links">
                     <li><a href="index.html">Beranda</a></li>
-                    <li><a href="produk.html">Produk</a></li>
                     <li><a href="about.html">Tentang Kami</a></li>
+                    <li><a href="produk.html">Produk</a></li>
                     <li><a href="blog.html">Blog</a></li>
                 </ul>
             </nav>
@@ -47,9 +51,12 @@
                 <div class="hero-content animate-me">
                     <h4>HELSINKI</h4>
                     <h1>SPEAKER NIRKABEL</h1>
-                    <p>Helsinki adalah koleksi baru speaker wireless yang didesain secara elegan, dibalut dengan tekstur kain premium untuk memberikan sentuhan estetika pada ruangan Anda sekaligus kualitas suara tingkat tinggi.</p>
+                    <p>Helsinki adalah koleksi baru speaker wireless yang didesain secara elegan, dibalut dengan tekstur
+                        kain premium untuk memberikan sentuhan estetika pada ruangan Anda sekaligus kualitas suara
+                        tingkat tinggi.</p>
                     <div class="hero-btns">
-                        <a href="https://wa.me/6281234567890?text=Halo,%20saya%20tertarik%20untuk%20memesan%20Speaker%20Helsinki" class="btn btn-primary">PESAN SEKARANG</a>
+                        <a href="https://wa.me/6281234567890?text=Halo,%20saya%20tertarik%20untuk%20memesan%20Speaker%20Helsinki"
+                            class="btn btn-primary">PESAN SEKARANG</a>
                         <a href="#about" class="btn btn-outline">LIHAT DETAIL</a>
                     </div>
                 </div>
@@ -65,17 +72,20 @@
         <div class="container">
             <div class="about-header animate-me">
                 <h2>TENTANG PRODUK</h2>
-                <p>Helsinki memiliki desain yang mungil dengan kualitas suara yang luar biasa. Material kain yang digunakan berasal dari Kvadrat, memberikan tampilan yang unik namun tetap mewah.</p>
+                <p>Helsinki memiliki desain yang mungil dengan kualitas suara yang luar biasa. Material kain yang
+                    digunakan berasal dari Kvadrat, memberikan tampilan yang unik namun tetap mewah.</p>
             </div>
             <div class="about-content">
                 <div class="about-features left animate-me">
                     <div class="feature-item">
                         <h3>MATERIAL PREMIUM</h3>
-                        <p>Dibalut serat kain ramah lingkungan dari Kvadrat, memberikan tekstur lembut namun tetap tahan lama.</p>
+                        <p>Dibalut serat kain ramah lingkungan dari Kvadrat, memberikan tekstur lembut namun tetap tahan
+                            lama.</p>
                     </div>
                     <div class="feature-item">
                         <h3>KONEKTIVITAS NIRKABEL</h3>
-                        <p>Dilengkapi Bluetooth 4.0 aptX dengan jangkauan stabil untuk pengalaman mendengar tanpa hambatan.</p>
+                        <p>Dilengkapi Bluetooth 4.0 aptX dengan jangkauan stabil untuk pengalaman mendengar tanpa
+                            hambatan.</p>
                     </div>
                 </div>
                 <div class="about-img animate-me">
@@ -84,7 +94,8 @@
                 <div class="about-features right animate-me">
                     <div class="feature-item">
                         <h3>SUARA JERNIH</h3>
-                        <p>Driver audio tingkat tinggi yang didesain khusus untuk menghasilkan vokal yang jernih dan bass yang dalam.</p>
+                        <p>Driver audio tingkat tinggi yang didesain khusus untuk menghasilkan vokal yang jernih dan
+                            bass yang dalam.</p>
                     </div>
                     <div class="feature-item">
                         <h3>KOMPAK & PORTABEL</h3>
@@ -110,9 +121,11 @@
                     </div>
                     <div class="deal-info">
                         <h3>VIFA HELSINKI - MISTY BLUE</h3>
-                        <p>Warna biru yang menenangkan, cocok untuk ruang kerja yang membutuhkan ketenangan inspirasi.</p>
+                        <p>Warna biru yang menenangkan, cocok untuk ruang kerja yang membutuhkan ketenangan inspirasi.
+                        </p>
                         <span class="price">Rp 6.500.000</span>
-                        <a href="https://wa.me/6281234567890?text=Halo,%20saya%20ingin%20memesan%20Helsinki%20Misty%20Blue" class="btn btn-outline">TAMBAHKAN KE KERANJANG</a>
+                        <a href="https://wa.me/6281234567890?text=Halo,%20saya%20ingin%20memesan%20Helsinki%20Misty%20Blue"
+                            class="btn btn-outline">TAMBAHKAN KE KERANJANG</a>
                     </div>
                 </div>
                 <!-- Card 2 -->
@@ -124,7 +137,8 @@
                         <h3>VIFA HELSINKI - PEBBLE GREY</h3>
                         <p>Sentuhan abu-abu yang klasik, memberikan kesan elegan yang abadi dan profesional.</p>
                         <span class="price">Rp 6.500.000</span>
-                        <a href="https://wa.me/6281234567890?text=Halo,%20saya%20ingin%20memesan%20Helsinki%20Pebble%20Grey" class="btn btn-outline">TAMBAHKAN KE KERANJANG</a>
+                        <a href="https://wa.me/6281234567890?text=Halo,%20saya%20ingin%20memesan%20Helsinki%20Pebble%20Grey"
+                            class="btn btn-outline">TAMBAHKAN KE KERANJANG</a>
                     </div>
                 </div>
                 <!-- Card 3 -->
@@ -136,7 +150,8 @@
                         <h3>VIFA HELSINKI - DUSTY ROSE</h3>
                         <p>Nuansa pink lembut yang hangat, sempurna sebagai hadiah atau pemanis dekorasi kamar.</p>
                         <span class="price">Rp 6.500.000</span>
-                        <a href="https://wa.me/6281234567890?text=Halo,%20saya%20ingin%20memesan%20Helsinki%20Dusty%20Rose" class="btn btn-outline">TAMBAHKAN KE KERANJANG</a>
+                        <a href="https://wa.me/6281234567890?text=Halo,%20saya%20ingin%20memesan%20Helsinki%20Dusty%20Rose"
+                            class="btn btn-outline">TAMBAHKAN KE KERANJANG</a>
                     </div>
                 </div>
             </div>
@@ -152,15 +167,22 @@
             </div>
             <div class="testimonial-container animate-me" style="position: relative;">
                 <!-- Decorative Avatars -->
-                <img src="https://i.pravatar.cc/50?u=1" alt="Avatar 1" style="position: absolute; top: 10%; left: -10%; border-radius: 50%; width: 60px;">
-                <img src="https://i.pravatar.cc/50?u=2" alt="Avatar 2" style="position: absolute; bottom: 20%; left: -5%; border-radius: 50%; width: 50px;">
-                <img src="https://i.pravatar.cc/50?u=3" alt="Avatar 3" style="position: absolute; top: -10%; right: 20%; border-radius: 50%; width: 45px;">
-                <img src="https://i.pravatar.cc/50?u=4" alt="Avatar 4" style="position: absolute; top: 30%; right: -10%; border-radius: 50%; width: 55px;">
-                <img src="https://i.pravatar.cc/50?u=5" alt="Avatar 5" style="position: absolute; bottom: 0%; right: 0%; border-radius: 50%; width: 65px;">
-                
+                <img src="https://i.pravatar.cc/50?u=1" alt="Avatar 1"
+                    style="position: absolute; top: 10%; left: -10%; border-radius: 50%; width: 60px;">
+                <img src="https://i.pravatar.cc/50?u=2" alt="Avatar 2"
+                    style="position: absolute; bottom: 20%; left: -5%; border-radius: 50%; width: 50px;">
+                <img src="https://i.pravatar.cc/50?u=3" alt="Avatar 3"
+                    style="position: absolute; top: -10%; right: 20%; border-radius: 50%; width: 45px;">
+                <img src="https://i.pravatar.cc/50?u=4" alt="Avatar 4"
+                    style="position: absolute; top: 30%; right: -10%; border-radius: 50%; width: 55px;">
+                <img src="https://i.pravatar.cc/50?u=5" alt="Avatar 5"
+                    style="position: absolute; bottom: 0%; right: 0%; border-radius: 50%; width: 65px;">
+
                 <div class="quote-box">
                     <i class="fas fa-quote-left"></i>
-                    <p>Suaranya luar biasa jernih untuk ukuran speaker sekecil ini. Desainnya sangat cantik dan benar-benar melengkapi estetika kamar minimalis saya. Saya sangat jatuh cinta dengan material kainnya.</p>
+                    <p>Suaranya luar biasa jernih untuk ukuran speaker sekecil ini. Desainnya sangat cantik dan
+                        benar-benar melengkapi estetika kamar minimalis saya. Saya sangat jatuh cinta dengan material
+                        kainnya.</p>
                     <div class="author">BRADLY WILSON</div>
                     <div class="stars">
                         <i class="fas fa-star" style="color: #ffcc00;"></i>
@@ -174,13 +196,63 @@
         </div>
     </section>
 
+    <!-- FAQ Section -->
+    <section class="faq-section animate-me">
+        <div class="container">
+            <div class="section-header">
+                <h2>Pertanyaan Sering Diajukan</h2>
+                <p>Informasi lebih lanjut mengenai produk dan layanan kami.</p>
+            </div>
+            <div class="faq-list">
+                <div class="faq-item">
+                    <div class="faq-question">
+                        <span>Apakah Speaker Helsinki tahan air?</span>
+                        <i class="fas fa-chevron-down"></i>
+                    </div>
+                    <div class="faq-answer">
+                        <p>Helsinki didesain untuk penggunaan di dalam ruangan (indoor). Material kain Kvadrat premiumnya tidak disarankan untuk terkena air secara langsung atau digunakan di lingkungan yang sangat lembap.</p>
+                    </div>
+                </div>
+                <div class="faq-item">
+                    <div class="faq-question">
+                        <span>Berapa lama daya tahan baterainya?</span>
+                        <i class="fas fa-chevron-down"></i>
+                    </div>
+                    <div class="faq-answer">
+                        <p>Daya tahan baterai Helsinki rata-rata adalah 8 jam untuk satu kali pengisian penuh dengan volume suara sedang.</p>
+                    </div>
+                </div>
+                <div class="faq-item">
+                    <div class="faq-question">
+                        <span>Bagaimana cara menyambungkan ke Bluetooth?</span>
+                        <i class="fas fa-chevron-down"></i>
+                    </div>
+                    <div class="faq-answer">
+                        <p>Tekan dan tahan tombol Bluetooth di bagian samping speaker hingga lampu indikator berkedip biru. Temukan "Vifa Helsinki" pada pengaturan Bluetooth di ponsel Anda dan pilih untuk menyambungkan.</p>
+                    </div>
+                </div>
+                <div class="faq-item">
+                    <div class="faq-question">
+                        <span>Apakah ada garansi resmi?</span>
+                        <i class="fas fa-chevron-down"></i>
+                    </div>
+                    <div class="faq-answer">
+                        <p>Ya, setiap pembelian melalui AR-STORE dilengkapi dengan garansi resmi selama 1 tahun untuk kerusakan pabrik.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- CTA Section -->
     <section class="cta-section animate-me">
         <div class="container">
             <div class="cta-content">
                 <h2>SIAP UNTUK MENDENGARKAN KEMERDUAN?</h2>
-                <p>Dapatkan pengalaman audio terbaik hari ini juga. Produk kami dijamin original dengan kualitas suara premium khas Nordik.</p>
-                <a href="https://wa.me/6281234567890?text=Halo,%20saya%20ingin%20order%20speaker%20Helsinki" class="btn btn-white">ORDER VIA WHATSAPP <i class="fab fa-whatsapp"></i></a>
+                <p>Dapatkan pengalaman audio terbaik hari ini juga. Produk kami dijamin original dengan kualitas suara
+                    premium khas Nordik.</p>
+                <a href="https://wa.me/6281234567890?text=Halo,%20saya%20ingin%20order%20speaker%20Helsinki"
+                    class="btn btn-white">ORDER VIA WHATSAPP <i class="fab fa-whatsapp"></i></a>
             </div>
         </div>
     </section>
@@ -237,4 +309,5 @@
     <!-- JS Scripts -->
     <script src="js/script.js"></script>
 </body>
+
 </html>
