--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
         <div class="container">
             <div class="about-story">
                 <div class="animate-me">
-                    <img src="img/blog1.png" alt="Our Workspace">
+                    <img src="img/hitam.jpeg" alt="Our Workspace">
                 </div>
                 <div class="animate-me">
                     <h2>FILOSOFI DESAIN KAMI</h2>
