--- a/artikel/cara-merawat-speaker-portabel.html
+++ b/artikel/cara-merawat-speaker-portabel.html
@@ -70,7 +70,7 @@
                 </div>
 
                 <div class="main-article-img">
-                    <img src="../img/variants.png" alt="Merawat Speaker">
+                    <img src="/img/art2.jpeg" alt="Merawat Speaker">
                 </div>
                 <p class="img-caption">Melakukan perawatan rutin adalah kunci agar kualitas suara speaker Anda tidak
                     menurun seiring waktu.</p>
@@ -140,7 +140,7 @@
                     <div class="promo-wa">
                         <a
                             href="https://wa.me/6281234567890?text=Halo,%20saya%20ingin%20tanya%20warna%20speaker%20Helsinki%20yang%20ready">
-                            <img src="../img/variants.png" alt="Promo WA Speaker">
+                            <img src="/img/hitam.jpeg" alt="Promo WA Speaker">
                             <p><strong>Dapatkan Koleksi Warna Terbatas di Sini! Klik Sekarang.</strong></p>
                         </a>
                     </div>
@@ -195,7 +195,7 @@
                 <h3>Artikel Terkait</h3>
                 <div class="blog-grid" style="margin-top: 20px;">
                     <div class="blog-card" style="box-shadow: none; border: 1px solid #eee;">
-                        <img src="../img/blog1.png" alt="Musik Fokus">
+                        <img src="/img/art1.jpeg" alt="Musik Fokus">
                         <div class="blog-card-content">
                             <h3>Manfaat Musik dalam Meningkatkan Fokus Kerja</h3>
                             <p>Bagaimana frekuensi suara membantu otak bekerja lebih produktif.</p>
@@ -204,7 +204,7 @@
                         </div>
                     </div>
                     <div class="blog-card" style="box-shadow: none; border: 1px solid #eee;">
-                        <img src="../img/hero.png" alt="Review Helsinki">
+                        <img src="/img/art3.jpeg" alt="Review Helsinki">
                         <div class="blog-card-content">
                             <h3>Review Mendalam Vifa Helsinki</h3>
                             <p>Ulasan jujur mengenai kualitas suara dan desain Nordik.</p>
