--- a/artikel/manfaat-musik-fokus-kerja.html
+++ b/artikel/manfaat-musik-fokus-kerja.html
@@ -71,7 +71,7 @@
                 </div>
 
                 <div class="main-article-img">
-                    <img src="../img/blog1.png" alt="Musik untuk Konsentrasi">
+                    <img src="/img/art1.jpeg" alt="Musik untuk Konsentrasi">
                 </div>
                 <p class="img-caption">Mendengarkan musik yang tepat dapat menciptakan ruang kedap suara psikologis
                     yang membantu Anda tetap fokus.</p>
@@ -127,7 +127,7 @@
                     </blockquote>
 
                     <div class="main-article-img">
-                        <img src="../img/variants.png" alt="Speaker Berwarna">
+                        <img src="/img/art12.jpeg" alt="Speaker Berwarna">
                     </div>
                     <p class="img-caption">Pilihan warna speaker yang sesuai dengan interior meja kerja juga dapat
                         meningkatkan mood secara visual.</p>
@@ -155,7 +155,7 @@
                     <div class="promo-wa">
                         <a
                             href="https://wa.me/6281234567890?text=Halo,%20saya%20tertarik%20dengan%20speaker%20Helsinki%20untuk%20kerja">
-                            <img src="../img/hero.png" alt="Promo WA Speaker">
+                            <img src="/img/biru.jpeg" alt="Promo WA Speaker">
                             <p><strong>Klik Gambar di Atas untuk Promo Spesial Speaker Helsinki!</strong></p>
                         </a>
                     </div>
@@ -212,7 +212,7 @@
                 <h3>Artikel Terkait</h3>
                 <div class="blog-grid" style="margin-top: 20px;">
                     <div class="blog-card" style="box-shadow: none; border: 1px solid #eee;">
-                        <img src="../img/variants.png" alt="Merawat Speaker">
+                        <img src="/img/art2.jpeg" alt="Merawat Speaker">
                         <div class="blog-card-content">
                             <h3>Panduan Lengkap Merawat Speaker Portabel</h3>
                             <p>Tips membersihkan material kain dan menjaga baterai tetap prima.</p>
@@ -221,7 +221,7 @@
                         </div>
                     </div>
                     <div class="blog-card" style="box-shadow: none; border: 1px solid #eee;">
-                        <img src="../img/hero.png" alt="Review Helsinki">
+                        <img src="/img/art3.jpeg" alt="Review Helsinki">
                         <div class="blog-card-content">
                             <h3>Review Mendalam Vifa Helsinki</h3>
                             <p>Ulasan jujur mengenai kualitas suara dan desain Nordik.</p>
