--- a/artikel/review-vifa-helsinki.html
+++ b/artikel/review-vifa-helsinki.html
@@ -70,7 +70,7 @@
                 </div>
 
                 <div class="main-article-img">
-                    <img src="../img/hero.png" alt="Vifa Helsinki Review">
+                    <img src="/img/art3.jpeg" alt="Vifa Helsinki Review">
                 </div>
                 <p class="img-caption">Desain minimalis Nordik dari Vifa Helsinki yang menggabungkan estetika
                     fashion dan teknologi audio.</p>
@@ -147,7 +147,7 @@
 
                     <div class="promo-wa">
                         <a href="https://wa.me/6281234567890?text=Halo,%20saya%20ingin%20cek%20stok%20Vifa%20Helsinki">
-                            <img src="../img/blog1.png" alt="Promo WA Speaker">
+                            <img src="/img/pink.jpeg" alt="Promo WA Speaker">
                             <p><strong>Cek Promo Khusus Hari Ini! Silahkan Hubungi Admin via WA.</strong></p>
                         </a>
                     </div>
@@ -204,7 +204,7 @@
                 <h3>Artikel Terkait</h3>
                 <div class="blog-grid" style="margin-top: 20px;">
                     <div class="blog-card" style="box-shadow: none; border: 1px solid #eee;">
-                        <img src="../img/blog1.png" alt="Musik Fokus">
+                        <img src="/img/art1.jpeg" alt="Musik Fokus">
                         <div class="blog-card-content">
                             <h3>Manfaat Musik dalam Meningkatkan Fokus Kerja</h3>
                             <p>Bagaimana frekuensi suara membantu otak bekerja lebih produktif.</p>
@@ -213,7 +213,7 @@
                         </div>
                     </div>
                     <div class="blog-card" style="box-shadow: none; border: 1px solid #eee;">
-                        <img src="../img/variants.png" alt="Merawat Speaker">
+                        <img src="/img/art2.jpeg" alt="Merawat Speaker">
                         <div class="blog-card-content">
                             <h3>Panduan Lengkap Merawat Speaker Portabel</h3>
                             <p>Tips membersihkan material kain dan menjaga baterai tetap prima.</p>
