--- a/blog.html
+++ b/blog.html
@@ -52,7 +52,7 @@
             <div class="blog-grid">
                 <!-- Blog 1 -->
                 <article class="blog-card animate-me">
-                    <img src="img/blog1.png" alt="Musik Fokus">
+                    <img src="img/art1.jpeg" alt="Musik Fokus">
                     <div class="blog-card-content">
                         <h3>Manfaat Musik dalam Meningkatkan Fokus Kerja</h3>
                         <p>Bagaimana frekuensi suara tertentu dapat membantu otak Anda bekerja lebih produktif dan
@@ -64,7 +64,7 @@
 
                 <!-- Blog 2 -->
                 <article class="blog-card animate-me">
-                    <img src="img/variants.png" alt="Merawat Speaker">
+                    <img src="img/art2.jpeg" alt="Merawat Speaker">
                     <div class="blog-card-content">
                         <h3>Panduan Lengkap Merawat Speaker Portabel Agar Tetap Awet</h3>
                         <p>Tips membersihkan material kain dan menjaga baterai speaker bluetooth Anda tetap dalam
@@ -76,7 +76,7 @@
 
                 <!-- Blog 3 -->
                 <article class="blog-card animate-me">
-                    <img src="img/hero.png" alt="Review Helsinki">
+                    <img src="img/art3.jpeg" alt="Review Helsinki">
                     <div class="blog-card-content">
                         <h3>Review Mendalam Vifa Helsinki: Suara Premium dalam Balutan Tekstil</h3>
                         <p>Ulasan jujur mengenai kualitas suara, daya tahan baterai, dan estetika desain Nordik dari
