--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     </div>
                 </div>
                 <div class="hero-image animate-me">
-                    <img src="img/hero.png" alt="Helsinki Speaker Hero" id="hero-img-display">
+                    <img src="img/pink.jpeg" alt="Helsinki Speaker Hero" id="hero-img-display">
                 </div>
             </div>
         </div>
@@ -89,7 +89,7 @@
                     </div>
                 </div>
                 <div class="about-img animate-me">
-                    <img src="https://i.ibb.co/vYcW175/helsinki-vertical.png" alt="Helsinki Vertical">
+                    <img src="img/biru.jpeg" alt="Helsinki Vertical">
                 </div>
                 <div class="about-features right animate-me">
                     <div class="feature-item">
@@ -117,7 +117,7 @@
                 <!-- Card 1 -->
                 <div class="deal-card animate-me">
                     <div class="deal-img">
-                        <img src="img/hero.png" alt="Speaker Biru">
+                        <img src="img/biru.jpeg" alt="Speaker Biru">
                     </div>
                     <div class="deal-info">
                         <h3>VIFA HELSINKI - MISTY BLUE</h3>
@@ -131,7 +131,7 @@
                 <!-- Card 2 -->
                 <div class="deal-card animate-me">
                     <div class="deal-img">
-                        <img src="https://i.ibb.co/3MTWbXQ/helsinki-grey.png" alt="Speaker Grey">
+                        <img src="img/abu.jpeg" alt="Speaker Grey">
                     </div>
                     <div class="deal-info">
                         <h3>VIFA HELSINKI - PEBBLE GREY</h3>
@@ -144,7 +144,7 @@
                 <!-- Card 3 -->
                 <div class="deal-card animate-me">
                     <div class="deal-img">
-                        <img src="https://i.ibb.co/qDxgWvF/helsinki-rose.png" alt="Speaker Rose">
+                        <img src="img/pink.jpeg" alt="Speaker Rose">
                     </div>
                     <div class="deal-info">
                         <h3>VIFA HELSINKI - DUSTY ROSE</h3>
