--- a/produk.html
+++ b/produk.html
@@ -50,7 +50,7 @@
                 <!-- Produk 1 -->
                 <div class="deal-card animate-me">
                     <div class="deal-img">
-                        <img src="img/hero.png" alt="Speaker Biru">
+                        <img src="img/biru.jpeg" alt="Speaker Biru">
                     </div>
                     <div class="deal-info">
                         <h3>VIFA HELSINKI - MISTY BLUE</h3>
@@ -65,7 +65,7 @@
                 <!-- Produk 2 -->
                 <div class="deal-card animate-me">
                     <div class="deal-img">
-                        <img src="https://i.ibb.co/3MTWbXQ/helsinki-grey.png" alt="Speaker Grey">
+                        <img src="img/abu.jpeg" alt="Speaker Grey">
                     </div>
                     <div class="deal-info">
                         <h3>VIFA HELSINKI - PEBBLE GREY</h3>
@@ -80,7 +80,7 @@
                 <!-- Produk 3 -->
                 <div class="deal-card animate-me">
                     <div class="deal-img">
-                        <img src="https://i.ibb.co/qDxgWvF/helsinki-rose.png" alt="Speaker Rose">
+                        <img src="img/pink.jpeg" alt="Speaker Rose">
                     </div>
                     <div class="deal-info">
                         <h3>VIFA HELSINKI - DUSTY ROSE</h3>
@@ -95,7 +95,7 @@
                 <!-- Produk 4 -->
                 <div class="deal-card animate-me">
                     <div class="deal-img">
-                        <img src="https://i.ibb.co/GHy75Vj/helsinki-black.png" alt="Speaker Black">
+                        <img src="img/hitam.jpeg" alt="Speaker Black">
                     </div>
                     <div class="deal-info">
                         <h3>VIFA HELSINKI - SLATE BLACK</h3>
